Implemented an interactive accordion on about.html.

--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Story - Twilight Grounds & Co.</title>
+    <meta name="description" content="Learn about the story, passion, and values behind Twilight Grounds & Co., a community-focused coffee shop.">
+    <meta name="keywords" content="about us, coffee shop story, community hub, our values, ethical coffee">
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -35,11 +38,30 @@
                 </div>
             </div>
 
+            <!-- Accordion for Values -->
             <div class="values-section" style="margin-top: 3rem;">
                 <h3>Our Values</h3>
-                <p><strong>Quality:</strong> We meticulously source our beans from sustainable farms and roast them in small batches to bring out the richest flavours. Our pastries are baked fresh in-house every single day.</p>
-                <p><strong>Community:</strong> We strive to be more than just a place that sells coffee. We are a hub for students, remote workers, friends, and families to gather and connect. We proudly feature the work of local artists and host community events.</p>
-                <p><strong>Sustainability:</strong> We are committed to ethical practices. This includes fair trade partnerships with our coffee growers, using biodegradable packaging, and minimizing our environmental footprint wherever possible.</p>
+                
+                <div class="accordion">
+                    <div class="accordion-item">
+                        <button class="accordion-header">Quality</button>
+                        <div class="accordion-content">
+                            <p>We meticulously source our beans from sustainable farms and roast them in small batches to bring out the richest flavours. Our pastries are baked fresh in-house every single day.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Community</button>
+                        <div class="accordion-content">
+                            <p>We strive to be more than just a place that sells coffee. We are a hub for students, remote workers, friends, and families to gather and connect. We proudly feature the work of local artists and host community events.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Sustainability</button>
+                        <div class="accordion-content">
+                            <p>We are committed to ethical practices. This includes fair trade partnerships with our coffee growers, using biodegradable packaging, and minimizing our environmental footprint wherever possible.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="team-section" style="margin-top: 3rem;">
@@ -54,5 +76,6 @@
         <p>&copy; 2025 Twilight Grounds & Co. | All Rights Reserved</p>
     </footer>
 
+    <script src="js/script.js" defer></script>
 </body>
 </html>
