Implemented a new gallery grid and lightbox modal on index.html.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twilight Grounds & Co. - Your Perfect Cup, Your Favorite Corner.</title>
+    <meta name="description" content="Welcome to Twilight Grounds & Co., your favorite corner for ethically sourced coffee and freshly baked pastries. A community hub designed for connection.">
+    <meta name="keywords" content="coffee shop, specialty coffee, ethical coffee, pastries, community, cafe">
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -49,11 +52,44 @@
                 </div>
             </div>
         </section>
+
+        <!-- Gallery Section -->
+        <section class="container">
+            <h2>Our Gallery</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="images/barista-work-coffee-shop.jpg" alt="Close-up of a barista pouring latte art" data-full="images/barista-work-coffee-shop.jpg" data-caption="Perfecting the pour.">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/rollcake-with-berries-platter.jpg" alt="A selection of fresh pastries on a wooden board" data-full="images/rollcake-with-berries-platter.jpg" data-caption="Freshly baked every morning.">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/man-inside-cafe-shop.jpg" alt="The cozy interior seating area of the coffee shop" data-full="images/man-inside-cafe-shop.jpg" data-caption="Your home away from home.">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/young-female-with-smilling-expression.jpg" alt="A customer smiling while holding a cup of coffee" data-full="images/young-female-with-smilling-expression.jpg" data-caption="Smiles and specialty coffee.">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/coffee-with-food-croissant-table.jpg" alt="An overhead shot of a coffee and a croissant" data-full="images/coffee-with-food-croissant-table.jpg" data-caption="The perfect pairing.">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/exterior-building.jpg" alt="The exterior of the Twilight Grounds & Co. shop" data-full="images/exterior-building.jpg" data-caption="Welcome to your favorite corner.">
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Lightbox Modal Structure -->
+    <div id="lightbox-modal" class="lightbox-modal">
+        <span class="lightbox-close">&times;</span>
+        <img class="lightbox-content" id="lightbox-image">
+        <div id="lightbox-caption" class="lightbox-caption"></div>
+    </div>
 
     <footer>
         <p>&copy; 2025 Twilight Grounds & Co. | All Rights Reserved</p>
     </footer>
 
+    <script src="js/script.js" defer></script>
 </body>
 </html>
